--- a/layout/theme.liquid
+++ b/layout/theme.liquid
@@ -67,6 +67,7 @@
     {{ 'owl.carousel.min.js' | asset_url | script_tag }}
     
     {{ 'custom-css.css' | asset_url | stylesheet_tag }}
+    {{ 'animations.css' | asset_url | stylesheet_tag }}
       {% comment %} 
     {{ 'layout.scss.css' | asset_url | stylesheet_tag }}
     {{ 'addeertz-theme.css' | asset_url | stylesheet_tag }}
