--- a/sections/home_image-teaser-row.liquid
+++ b/sections/home_image-teaser-row.liquid
@@ -48,7 +48,7 @@
               <img loading="lazy"  src="{{ image_url_small }}"
                    data-srcset="{{ image_url_210 }} 210w, {{ image_url_420 }} 420w, {{ image_url_730 }} 730w, {{ image_url_1270 }} 1270w, {{ image_url_1650 }} 1650w,  {{ image_url_2000 }} 2000w,"
                    data-sizes="auto"  alt="{{ image_alt }}"
-                   class="lazyload block_img_link_img {% if block.settings.jsrenderheight %} centered{% endif %}{% if block.settings.jsrenderheight-mobile %} centered-mobile{% endif %}{% if block.settings.jsrenderheight == false and block.settings.jsrenderheight-mobile == false %} notcentred{% endif %}"
+                   class="longfade lazyload block_img_link_img {% if block.settings.jsrenderheight %} centered{% endif %}{% if block.settings.jsrenderheight-mobile %} centered-mobile{% endif %}{% if block.settings.jsrenderheight == false and block.settings.jsrenderheight-mobile == false %} notcentred{% endif %}"
                    />
               {% if block.settings.teaser_link != blank %}
             </a>
@@ -144,7 +144,7 @@
                 <img loading="lazy"  src="{{ image_url_small }}"
                      data-srcset="{{ image_url_210 }} 210w, {{ image_url_420 }} 420w, {{ image_url_730 }} 730w, {{ image_url_1270 }} 1270w, {{ image_url_1650 }} 1650w,  {{ image_url_2000 }} 2000w,"
                      data-sizes="auto"  alt="{{ image_alt }}"
-                     class="lazyload block_img_link_img {% if block.settings.jsrenderheight %} centered{% endif %}{% if block.settings.jsrenderheight-mobile %} centered-mobile{% endif %}{% if block.settings.jsrenderheight == false and block.settings.jsrenderheight-mobile == false %} notcentred{% endif %}"
+                     class="longfade lazyload block_img_link_img {% if block.settings.jsrenderheight %} centered{% endif %}{% if block.settings.jsrenderheight-mobile %} centered-mobile{% endif %}{% if block.settings.jsrenderheight == false and block.settings.jsrenderheight-mobile == false %} notcentred{% endif %}"
                      />
                 {% if block.settings.teaser_link != blank %}
               </a>
