--- a/snippets/mega-nav-multi-pic-4.liquid
+++ b/snippets/mega-nav-multi-pic-4.liquid
@@ -1,5 +1,5 @@
 {% comment %} Mega Nav Containing One Picture Per Sub_Link  {% endcomment %}
-<div class="mega-nav-submenu-wrapper container-fluid" id="mega-menu-oben">
+<div class="mega-nav-submenu-wrapper container-fluid fade" id="mega-menu-oben">
   <div class="nav-border-top"></div>
   <div class="mega-nav-catalog-nav-lists-wrapper regular-padding" >
     {% if horizontal_nav_linklist.handle != '' %} 
@@ -13,7 +13,7 @@
             <div class="top-mega-nav-link_mm_li image__link {% if link.active %}active{% endif %} level-1">
               <a  class="top-mega-nav-link_mm {% if link.active %}active{% endif %} level-1" href="{{ sub_link.url }}">
                 <div class="menu-image-teaser-link-wrapper">
-                  <img loading="lazy" class="lazyload mega-nav-img" src="{{ settings.navlink4_sub1_image | img_url: '500x' }}"/>
+                  <img loading="lazy" class="fade lazyload mega-nav-img" src="{{ settings.navlink4_sub1_image | img_url: '500x' }}"/>
                 </div>
               </a>
             </div>
@@ -21,7 +21,7 @@
               <div class="top-mega-nav-link_mm_li image__link {% if link.active %}active{% endif %} level-1">
                 <a  class="top-mega-nav-link_mm {% if link.active %}active{% endif %} level-1" href="{{ sub_link.url }}">
                   <div class="menu-image-teaser-link-wrapper">
-                    <img loading="lazy" class="lazyload mega-nav-img" src="{{ settings.navlink4_sub2_image | img_url: '500x' }}"/>
+                    <img loading="lazy" class="fade lazyload mega-nav-img" src="{{ settings.navlink4_sub2_image | img_url: '500x' }}"/>
                   </div>
                 </a>
               </div>
@@ -29,7 +29,7 @@
                 <div class="top-mega-nav-link_mm_li image__link {% if link.active %}active{% endif %} level-1">
                   <a  class="top-mega-nav-link_mm {% if link.active %}active{% endif %} level-1" href="{{ sub_link.url }}">
                     <div class="menu-image-teaser-link-wrapper">
-                      <img loading="lazy" class="lazyload mega-nav-img" src="{{ settings.navlink4_sub3_image | img_url: '500x' }}"/>
+                      <img loading="lazy" class="fade lazyload mega-nav-img" src="{{ settings.navlink4_sub3_image | img_url: '500x' }}"/>
                 </div>
               </a>
             </div>
@@ -37,7 +37,7 @@
               <div class="top-mega-nav-link_mm_li image__link {% if link.active %}active{% endif %} level-1">
                 <a  class="top-mega-nav-link_mm {% if link.active %}active{% endif %} level-1" href="{{ sub_link.url }}">
                   <div class="menu-image-teaser-link-wrapper">
-                    <img loading="lazy" class="lazyload mega-nav-img" src="{{ settings.navlink4_sub4_image | img_url: '500x' }}"/>
+                    <img loading="lazy" class="fade lazyload mega-nav-img" src="{{ settings.navlink4_sub4_image | img_url: '500x' }}"/>
                   </div>
               </a>
             </div>
@@ -45,7 +45,7 @@
             <div class="top-mega-nav-link_mm_li image__link {% if link.active %}active{% endif %} level-1">
               <a  class="top-mega-nav-link_mm {% if link.active %}active{% endif %} level-1" href="{{ sub_link.url }}">
                 <div class="menu-image-teaser-link-wrapper">
-                  <img loading="lazy" class="lazyload mega-nav-img" src="{{ settings.navlink4_sub5_image | img_url: '500x' }}"/>
+                  <img loading="lazy" class="fade lazyload mega-nav-img" src="{{ settings.navlink4_sub5_image | img_url: '500x' }}"/>
                 </div>
               </a>
             </div>
