--- a/assets/theme.scss.liquid
+++ b/assets/theme.scss.liquid
@@ -12532,7 +12532,6 @@ HEADER
     }
   } 
   &.header__item-cart {
-    padding-right: 25px;
     .cart-icon-wrapper__count {
       margin-right: 10px;
     }
@@ -12903,6 +12902,8 @@ height: 300px;
   }
 
   .mega-nav-submenu-wrapper {
+    border: 1px solid #0000000f;
+    box-shadow: 0px 4px 4px #dddddd14;
     display: none;
     position: fixed;
     width: 100%;
@@ -12948,8 +12949,6 @@ height: 300px;
       padding: 24px 2.4% 0;
     }
     .top-mega-nav-link_mm_li.level-1:first-child {
-      padding-left: 0;
-      border-right: 1px solid;
     }
     .top-mega-nav-link_mm_li.level-1:last-child {
       padding-right: 0;
