--- a/sections/header.liquid
+++ b/sections/header.liquid
@@ -1,113 +1,156 @@
 {%- style -%}
-
-.logo_bijules {
-
+.nav-single-img{ 
+  width: 200px;
+  object-fit: cover;
+}
+@media (max-width: 1200px) {
+  .nav-single-img {
+    display: none;
+  }
+}
+.link-lists {
+  display: flex !important;
+  justify-content: flex-start;
+  padding: 0rem 4rem;
+  gap: 7rem;
+  
 }
 
-{%- endstyle -%}  
-  
-  {% comment %} Mega-Nav 1.0 & Mega-Nav 2.0 Header {% endcomment %}
-<header class="header {% if settings.navigation_mode == 'horizontal' %}header--with-horizontal-nav{% endif %}" role="banner">
-  <div class="container-fluid" style="background: white;">
-    <div class="row">
-      <div class="header__wrapper">
-        <div class="header__item header__item-toggle">
-          <a href="#" class="header__link" data-action="open-navigation-sidebar">
-            <div class="mobile-header-item">{% include 'icon' with 'hamburger' %}</div>
-          </a>
-        </div>
-        {% if settings.navigation_mode == 'horizontal' %}
-          <nav class="navigation-horizontal" role="navigation">
+.li-1 {
+  text-align: left;
+  padding: 3rem 0rem 2rem 0rem;
+}
+.li-title {
+  margin-bottom: 1.5rem !important;
+  color: darkgoldenrod;
+  font-weight: 300;
+  transition: all 0.05s ease;
+}
 
-            {% render 'navigation-custom-top-megamenu-new', level: 0 %}
-          </nav> 
-        {% endif %}
-        <div class="header__item header__item-cart">
-          <a href="/cart" class="header__link" {% if settings.cart_page == 'drawer' and template != 'cart' %}data-action="open-mini-cart"{% endif %}>
-            <div class="cart-icon-wrapper cart-icon-wrapper--has-items" {% if cart.item_count == 0 %}style="display: none"{% endif %}>
-              <div class="desk-header-item header-navigation-text-link">
-                <span class="cart-text">{{ 'cart.general.title' | t }}<span class="cart-icon-wrapper__count">({{ cart.item_count }})</span></span>
-              </div>
-              <div class="mobile-header-item">
-                {% include 'icon' with 'cart-full' %}
-                <span class="cart-icon-wrapper__count">({{ cart.item_count }})</span>
-              </div>
-            </div>
-            <div class="cart-icon-wrapper cart-icon-wrapper--empty" {% unless cart.item_count == 0 %}style="display: none"{% endunless %}>
-              <div class="header-navigation-text-link cart-text desk-header-item">{{ 'cart.general.title' | t }}</div>
-              <div class="mobile-header-item">{% include 'icon' with 'cart-empty' %}</div>
-            </div>
-          </a>
+.li-item {
+  line-height: 1.8;
+  font-weight: 300;
+  color: black;
+}
+
+.header-nav {
+  display: flex;
+  justify-content: space-between;
+  width: 100vw;
+  align-items: center;
+  background: white;
+  padding: 0 2rem;
+}
+
+.center-wrap {
+  width: 100%;
+  position: absolute;
+  display: flex;
+  justify-content: center;
+  z-index: 1;
+}
+.logo-bijules {
+}
+
+
+{%- endstyle -%}
+{% comment %} Mega-Nav 1.0 & Mega-Nav 2.0 Header {% endcomment %}
+<header class="header fade {% if settings.navigation_mode == 'horizontal' %}header--with-horizontal-nav{% endif %}" role="banner">
+    <nav class="header-nav">
+      {% if settings.navigation_mode == 'horizontal' %}
+        <div class="navigation-horizontal" role="navigation">
+          {% render 'navigation-custom-top-megamenu-new', level: 0 %}
         </div> 
-        {% if shop.customer_accounts_enabled %}
-          <div class="header__item header__item-account">
-            <a href="/account{% unless customer %}/login{% endunless %}" class="header__link ">
-              <div class="header-navigation-text-link account-text">My Account</div>
+      {% endif %}
+
+      <div class="center-wrap">
+            <a href="{{ shop.url }}" >
+              <img loading="lazy" class="logo-bijules" 
+                  src="{{ section.settings.logo | img_url }}"
+                  alt="{{ section.settings.logo.alt | default: shop.name }}" 
+                  itemprop="logo">
+            </a>
+      </div>
+
+      <div>
+        <div class="header__wrapper" style="z-index: 20;">
+          <div class="header__item header__item-toggle">
+            <a href="#" class="header__link" data-action="open-navigation-sidebar">
+              <div class="mobile-header-item">{% include 'icon' with 'hamburger' %}</div>
             </a>
           </div>
-        {% endif %}
-        <div class="header__item header__item-search">
-          <a href="/search" class="header__link" data-action="open-search">
-            {% include 'icon' with 'search' %}
-          </a>
-          <div class="header__search-wrapper">
-            <a href="#" class="header__link">
+          <div class="header__item header__item-cart">
+            <a href="/cart" class="header__link" {% if settings.cart_page == 'drawer' and template != 'cart' %}data-action="open-mini-cart"{% endif %}>
+              <div class="cart-icon-wrapper cart-icon-wrapper--has-items" {% if cart.item_count == 0 %}style="display: none"{% endif %}>
+                <div  class="desk-header-item header-navigation-text-link">
+                  <span class="cart-text">{{ 'cart.general.title' | t }}<span class="cart-icon-wrapper__count">({{ cart.item_count }})</span></span>
+                </div>
+                <div class="mobile-header-item">
+                  {% include 'icon' with 'cart-full' %}
+                  <span class="cart-icon-wrapper__count">({{ cart.item_count }})</span>
+                </div>
+              </div>
+              <div class="cart-icon-wrapper cart-icon-wrapper--empty" {% unless cart.item_count == 0 %}style="display: none"{% endunless %}>
+                <div style="margin: 0" class="header-navigation-text-link cart-text desk-header-item">{{ 'cart.general.title' | t }}</div>
+                <div class="mobile-header-item">{% include 'icon' with 'cart-empty' %}</div>
+              </div>
+            </a>
+          </div> 
+          {% if shop.customer_accounts_enabled %}
+            <div class="header__item header__item-account">
+              <a href="/account{% unless customer %}/login{% endunless %}" class="header__link ">
+                <div class="header-navigation-text-link account-text">My Account</div>
+              </a>
+            </div>
+          {% endif %}
+          <div class="header__item header__item-search">
+            <a href="/search" class="header__link" data-action="open-search">
               {% include 'icon' with 'search' %}
             </a>
-            <form class="header__search-form" action="/search" method="GET" role="search">
-              <input type="hidden" name="type" value="{{ settings.search_mode }}">
-              <input type="search" name="q" class="search__input" autocomplete="off" autocorrect="off" aria-label="{{ 'search.autocomplete.input_placeholder' | t }}" placeholder="{{ 'search.autocomplete.input_placeholder' | t }}" value="{{ search.terms | escape }}">
-            </form>
-            <a href="#" class="header__link header__search-close" data-action="close-search">
-              {% include 'icon' with 'close-thin' %}
-            </a>
-            <div class="autocomplete">
-              <span class="autocomplete__spinner" style="display: none">
-                <svg width="50" height="50" viewBox="0 0 38 38" xmlns="http://www.w3.org/2000/svg" stroke="{{ settings.header_color }}">
-                  <g fill="none" fill-rule="evenodd">
-                    <g transform="translate(1 1)" stroke-width="2">
-                      <circle stroke-opacity=".5" cx="18" cy="18" r="18"></circle>
-                      <path d="M36 18c0-9.94-8.06-18-18-18"></path>
+            <div class="header__search-wrapper">
+              <a href="#" class="header__link">
+                {% include 'icon' with 'search' %}
+              </a>
+              <form class="header__search-form" action="/search" method="GET" role="search">
+                <input type="hidden" name="type" value="{{ settings.search_mode }}">
+                <input type="search" name="q" class="search__input" autocomplete="off" autocorrect="off" aria-label="{{ 'search.autocomplete.input_placeholder' | t }}" placeholder="{{ 'search.autocomplete.input_placeholder' | t }}" value="{{ search.terms | escape }}">
+              </form>
+              <a href="#" class="header__link header__search-close" data-action="close-search">
+                {% include 'icon' with 'close-thin' %}
+              </a>
+              <div class="autocomplete">
+                <span class="autocomplete__spinner" style="display: none">
+                  <svg width="50" height="50" viewBox="0 0 38 38" xmlns="http://www.w3.org/2000/svg" stroke="{{ settings.header_color }}">
+                    <g fill="none" fill-rule="evenodd">
+                      <g transform="translate(1 1)" stroke-width="2">
+                        <circle stroke-opacity=".5" cx="18" cy="18" r="18"></circle>
+                        <path d="M36 18c0-9.94-8.06-18-18-18"></path>
+                      </g>
                     </g>
-                  </g>
-                </svg>
-              </span>
+                  </svg>
+                </span>
+              </div>
             </div>
           </div>
+          {% if settings.currency_conversion_enabled %}
+            <div class="header__item header__item-currency">
+              {% include 'currency_selector' %}
+            </div>
+          {% endif %}
+    
+    
+          {% if section.settings.show_social_media %}
+            {% capture social_media %}
+              {% include 'social_networks', show_social_name: false %}
+            {% endcapture %}
+            {% if social_media != blank %}
+              <div class="header__item header__item-social">
+                {{ social_media }}
+              </div>
+            {% endif %}
+          {% endif %}
         </div>
-
-
-
-
-
-      {% if settings.currency_conversion_enabled %}
-        <div class="header__item header__item-currency">
-          {% include 'currency_selector' %}
-        </div>
-      {% endif %}
-
-
-      {% if section.settings.show_social_media %}
-        {% capture social_media %}
-          {% include 'social_networks', show_social_name: false %}
-        {% endcapture %}
-        {% if social_media != blank %}
-          <div class="header__item header__item-social">
-            {{ social_media }}
-          </div>
-        {% endif %}
-      {% endif %}
-      
-      <div class="logo_bijules">
-          <a href="{{ shop.url }}">
-            <img loading="lazy" 
-                 src="{{ section.settings.logo | img_url }}"
-                 alt="{{ section.settings.logo.alt | default: shop.name }}" 
-                 itemprop="logo" />
-          </a>
-      </div>
-    </div>
-  </div>
+      </nav>
 </header>
 
 
