--- a/snippets/mega-nav-single-pic.liquid
+++ b/snippets/mega-nav-single-pic.liquid
@@ -1,35 +1,32 @@
+
 {% comment %} Mega Nav Containing Sub_links and Sub_Sub_Links with one single image to the right {% endcomment %}
-<div class="mega-nav-submenu-wrapper container-fluid no-padding" id="mega-menu-oben">
-  <div class="nav-border-top"></div>
-  <div class="mega-nav-catalog-nav-lists-wrapper regular-padding" >
+<div class="mega-nav-submenu-wrapper fade" id="mega-menu-oben">
     {% if horizontal_nav_linklist.handle != '' %} 
-    <ul class="top-mega-nav-link-list-mm level-1 mega-nav-catalog-nav-list dis-flex" id="{{ linklists.oben-nav-one.handle }}">
+    <nav class="link-lists" id="{{ linklists.oben-nav-one.handle }}">
       {% comment %} LEVEL 1 {% endcomment %}
 
-      {% for sub_link in link.links limit:1 %}
-      <li class="featured-menu-block-li top-mega-nav-link_mm_li{% if sub_link.active %} active{% endif %}{% comment %} col-2 col-lg-2 {% endcomment %}{% if sub_link.object.image %} nav-image-link{% endif %} level-1  mega-nav-col">
+      {% comment %} {% for sub_link in link.links limit:1 %}
+      <li class="{% if sub_link.active %} active{% endif %}">
         {% comment %} LEVEL 2 {% endcomment %}
-        <ul class="featured-menu-block-ul level-2">
+        <ul>
           {% for sub_sub_link in sub_link.links %}
-          <li class="level-2">
+          <li>
             <a href="{{ sub_sub_link.url }}">{{ sub_sub_link.title | escape }}</a>
           </li>
           {% endfor %}
         </ul>
       </li>
-      {% endfor %}
+      {% endfor %} {% endcomment %}
 
-      {% for sub_link in link.links offset:1 %}
-      <li class="top-mega-nav-link_mm_li{% if sub_link.active %} active{% endif %}{% comment %}col-2 col-lg-2 {% endcomment %}{% if sub_link.object.image %} nav-image-link{% endif %} level-1  mega-nav-col">
-        <div class="nav-title">
-          <a  class="top-mega-nav-link_mm{% if sub_link.active %} active{% endif %} level-1" href="{{ sub_link.url }}">
-            <span>{{ sub_link.title }}</span>
+      {% for sub_link in link.links %}
+      <li class="li-1 {% if sub_link.active %} active{% endif %}">
+          <a class="{% if sub_link.active %} active{% endif %}" href="{{ sub_link.url }}">
+            <h3 class="li-title small-lift">{{ sub_link.title }}</h3>
           </a>
-        </div>
         {% comment %} LEVEL 2 {% endcomment %}
-        <ul class="level-2">
+        <ul>
           {% for sub_sub_link in sub_link.links %}
-          <li class="level-2">
+          <li class="li-item small-lift">
             <a href="{{ sub_sub_link.url }}">{{ sub_sub_link.title | escape }}</a>
           </li>
           {% endfor %}
@@ -42,7 +39,7 @@
       {% when 1 %}
       {% if settings.navlink1_image %}
 
-      <li class="single-featured-image top-mega-nav-link-image-mm top-mega-nav-link-image-right top-mega-nav-link_mm_li image__link{% if link.active %} active{% endif %} level-1">
+      <li class="nav-single-img">
         <a  class="top-mega-nav-link_mm {% if link.active %}active{% endif %} level-1" href="{{ link.url }}">
           <div class="menu-image-teaser-link-wrapper">
             <img loading="lazy" class="lazyload" src="{{ settings.navlink1_image | img_url: '500x' }}" alt="{{ shop.name | escape }}"/>
@@ -54,7 +51,7 @@
       {% endif %}
       {% when 2 %}
       {% if settings.navlink2_image %}
-      <li class="single-featured-image top-mega-nav-link-image-mm top-mega-nav-link-image-right top-mega-nav-link_mm_li image__link{% if link.active %} active{% endif %} level-1">
+      <li class="nav-single-img">
         <a  class="top-mega-nav-link_mm{% if link.active %} active{% endif %} level-1" href="{{ link.url }}">
           <div class="menu-image-teaser-link-wrapper">
             <img loading="lazy" src="{{ settings.navlink2_image | img_url: '500x' }}" />
@@ -66,7 +63,7 @@
       {% endif %}
       {% when 3 %}
       {% if settings.navlink3_image %}
-      <li class="single-featured-image top-mega-nav-link-image-mm top-mega-nav-link-image-right top-mega-nav-link_mm_li image__link{% if link.active %} active{% endif %} level-1">
+      <li class="nav-single-img">
         <a  class="top-mega-nav-link_mm{% if link.active %} active{% endif %} level-1" href="{{ link.url }}">
           <div class="menu-image-teaser-link-wrapper">
             <img loading="lazy" src="{{ settings.navlink3_image | img_url: '500x' }}" />
@@ -78,7 +75,7 @@
       {% endif %}
       {% when 4 %}
       {% if settings.navlink4_image %}
-      <li class="single-featured-image top-mega-nav-link-image-mm top-mega-nav-link-image-right top-mega-nav-link_mm_li image__link{% if link.active %} active{% endif %} level-1">
+      <li class="nav-single-img">
         <a  class="top-mega-nav-link_mm{% if link.active %} active{% endif %} level-1" href="{{ link.url }}">
           <div class="menu-image-teaser-link-wrapper">
             <img loading="lazy" src="{{ settings.navlink4_image | img_url: '500x' }}" />
@@ -90,7 +87,7 @@
       {% endif %}
       {% when 5 %}
       {% if settings.navlink5_image %}
-      <li class="single-featured-image top-mega-nav-link-image-mm top-mega-nav-link-image-right top-mega-nav-link_mm_li image__link{% if link.active %} active{% endif %} level-1">
+      <li class="nav-single-img">
         <a  class="top-mega-nav-link_mm{% if link.active %} active{% endif %} level-1" href="{{ link.url }}">
           <div class="menu-image-teaser-link-wrapper">
             <img loading="lazy" src="{{ settings.navlink5_image | img_url: '500x' }}" />
@@ -117,8 +114,7 @@
       {% endcase %}
 
 
-    </ul>
+    </nav>
     {% endif %}
-  </div>
 </div>
 
